<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.glueckstagebuch.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/beginne_heute"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/Wie_heißt_Du"
            android:inputType="textAutoCorrect"
            android:maxLength="14"
            android:textColor="#388e3c" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/nimm_Dir"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/first_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#4caf50"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/first_answer_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/gemeinschaft"
            android:inputType="textAutoCorrect"
            android:maxLength="42"
            android:textColor="#388e3c"
            android:visibility="gone" />

        <TextView
            android:id="@+id/second_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#4caf50"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/second_answer_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/gluecksfall"
            android:inputType="textAutoCorrect"
            android:maxLength="42"
            android:textColor="#388e3c"
            android:visibility="gone" />

        <TextView
            android:id="@+id/third_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#4caf50"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/third_answer_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/genuss"
            android:inputType="textAutoCorrect"
            android:maxLength="42"
            android:textColor="#388e3c"
            android:visibility="gone" />

        <TextView
            android:id="@+id/fourth_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#4caf50"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/fourth_answer_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/selbstueberwindung"
            android:inputType="textAutoCorrect"
            android:maxLength="42"
            android:textColor="#388e3c"
            android:visibility="gone" />

        <TextView
            android:id="@+id/fifth_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#4caf50"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/fifth_answer_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/reichhaltigkeit"
            android:inputType="textAutoCorrect"
            android:maxLength="42"
            android:textColor="#388e3c"
            android:visibility="gone" />

        <Button
            android:id="@+id/ask_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="#388e3c"
            android:onClick="askQuestion"
            android:text="@string/weiter"
            android:textColor="#FFFFFF" />


        <TextView
            android:id="@+id/status_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/markiere_deinen"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/glueck_barometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/es_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="esIstRund"
                android:paddingLeft="14dp"
                android:text="@string/es_ist"
                android:textAppearance="?android:textAppearanceMedium" />

            <ImageView
                android:id="@+id/kleeblatt_rund_image_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/kleeblatt_rund"
                android:visibility="gone" />


            <RadioButton
                android:id="@+id/morgen_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="esIstBraun"
                android:paddingLeft="14dp"
                android:text="@string/morgen_ist"
                android:textAppearance="?android:textAppearanceMedium" />

            <ImageView
                android:id="@+id/kleeblatt_braun_image_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/kleeblatt_braun"
                android:visibility="gone" />


            <RadioButton
                android:id="@+id/das_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="esIstHand"
                android:paddingLeft="14dp"
                android:text="@string/das_leben"
                android:textAppearance="?android:textAppearanceMedium" />

            <ImageView
                android:id="@+id/kleeblatt_hand_image_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/kleeblatt_hand"
                android:visibility="gone" />


            <RadioButton
                android:id="@+id/ueber_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="esIstGruen"
                android:paddingLeft="14dp"
                android:text="@string/ueber_beide"
                android:textAppearance="?android:textAppearanceMedium" />

            <ImageView
                android:id="@+id/kleeblatt_gruen_image_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/kleeblatt_gruen"
                android:visibility="gone" />


            <RadioButton
                android:id="@+id/einfach_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="esIstKaefer"
                android:paddingLeft="14dp"
                android:text="@string/einfach_nur"
                android:textAppearance="?android:textAppearanceMedium" />

            <ImageView
                android:id="@+id/kleeblatt_kaefer_image_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/kleeblatt_kaefer"
                android:visibility="gone" />

        </RadioGroup>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/heute_war"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/heute_war"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/weil_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/heute_war"
                android:background="#388e3c"
                android:onClick="weil"
                android:text="@string/weil"
                android:textColor="#FFFFFF"
                android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:id="@+id/all_together"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:background="#388e3c"
            android:padding="24dp"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:visibility="gone" />


        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="16dp"
            android:background="#388e3c"
            android:onClick="sendQuestion"
            android:text="@string/teilen"
            android:textColor="#FFFFFF"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>